--- a/_config.yml
+++ b/_config.yml
@@ -3,19 +3,19 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Jakub Papuga | System Administrator
 subtitle:
-description:
+description: Hello, I'm Jacob. I am a Linux System Administrator. Currently I'm studying Commputer Science at Lodz University of Technology.
 keywords:
-author: 
-language: 
-timezone:
+author: Jakub Papuga
+language: en
+timezone: Europe/Warsaw
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://new.mrpsycho.pl/
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :catefory/:title/
 permalink_defaults:
 
 # Directory
@@ -54,7 +54,7 @@ index_generator:
   order_by: -date
   
 # Category & Tag
-default_category: uncategorized
+default_category: cheatsheets
 category_map:
 tag_map:
 
@@ -62,18 +62,18 @@ tag_map:
 ## Hexo uses Moment.js to parse and display date
 ## You can customize the date format as defined in
 ## http://momentjs.com/docs/#/displaying/format/
-date_format: YYYY-MM-DD
+date_format: MM-YYYY
 time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 0
 pagination_dir: page
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: cactus
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
