--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ timezone: Europe/Warsaw
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: https://new.mrpsycho.pl/
 root: /
-permalink: :catefory/:title/
+permalink: :category/:title/
 permalink_defaults:
 
 # Directory
