--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -49,7 +49,7 @@ archive:
 # Options:
 #   - show_updated: show the last modification date.
 post:
-  show_updated: false
+  show_updated: true
 
 ##############################################################################
 # Look and Feel
