--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -15,7 +15,7 @@ direction: ltr
 # languages/*.yml
 nav:
   Home: /
-  Cheat Sheets: /cheatshees/
+  Cheat Sheets: /cheatsheets/
 
 
 # Links to your social media accounts.
