--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -16,6 +16,7 @@ direction: ltr
 nav:
   Home: /
   Cheat Sheets: /cheatsheets/
+  GitHub: https://github.com/MrPsycho5
 
 
 # Links to your social media accounts.
