--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Jakub Papuga | System Administrator
 subtitle:
-description: Hello, I'm Jacob. I am a Linux System Administrator. Currently I'm studying Commputer Science at Lodz University of Technology.
+description: Hello, I'm Jacob. I am a Linux System Administrator.
 keywords:
 author: Jakub Papuga
 language: en
