--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Europe/Warsaw
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://new.mrpsycho.pl/
+url: https://mrpsycho.pl/
 root: /
 permalink: :category/:title/
 permalink_defaults:
