--- a/themes/cactus/_config.yml
+++ b/themes/cactus/_config.yml
@@ -17,7 +17,7 @@ nav:
   Home: /
   Cheat Sheets: /cheatsheets/
   GitHub: https://github.com/MrPsycho5
-
+  Brave: https://brave.com/mrp465
 
 # Links to your social media accounts.
 # The keys should correspond to Fontawesome icon names
@@ -129,8 +129,8 @@ disqus:
 
 # Fill in your Google Analytics tracking ID to enable Google Analytics.
 google_analytics:
-  enabled: false
-  id: UA-86660611-1
+  enabled: true
+  id: UA-66103207-2
 
 # Fill in your Baidu Analytics tracking ID to enable Baidu Analytics.
 baidu_analytics:
